[metadata]
name = manila-extensions
author = Maurice Escher (SAP SE)
author-email = maurice.escher@sap.com
summary = SAP Converged Cloud OpenStack Manila Extensions
project_urls =
    Source Code = https://github.com/sapcc/manila-extensions
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    manila

[files]
packages =
    cc

[entry_points]
console_scripts =
    manila-manage-extension = cc.manila.cmd.manage:main
